# GameDev-Setup

./: .gitattributes  LICENSE  README.md
resources/: game_data.data
scripts/: build.bat  build.sh  install_dependencies.sh  run.bat  run.sh
src/: CMakeLists.txt
src/includes/game_layer/: game_layer.h
src/includes/platform/: platform_input.h
src/sources/game_layer/: game_layer.cpp
src/sources/platform/: error_reporting.cpp  glfw_main.cpp  other_platform_functions.cpp  platform_input.cpp
